# Research-and-Development

./: .gitignore  .gitmodules  Exercises.aux  Exercises.out  Exercises.tex  Exercises.toc  Latex Playground.md  README.md  playground.ipynb  plots.py
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
02-Preliminaries/: 01-Data_Manipultation.ipynb  Exercises.aux  Exercises.tex  Exercises.toc
03-Linear_Neural_Networks_for_Classification/: chapter3.tex  chapter3_solutions.aux  chapter3_solutions.tex
03-Linear_Neural_Networks_for_Regression/: 2 Object-Oriented Design for Implementation.md  Object-Oriented_Design_for_Implementation.ipynb
Blitzstein-Probability/: Exercises.tex  _Blitzstein-Probability.md  playground.ipynb
Books-Courses-Exercises/zero2prod/: Cargo.toml  _zero2prod.md
Books-Courses-Exercises/zero2prod/src/: lib.rs
Books-Courses-Exercises/zero2prod/tests/: health_check.rs
Dive-into-Deep-Learning/: .gitignore  exerciseRipper.py
Flashcards/: Definition - Adapted Stochastic Process.md  Definition - Equivalent Probability Measures.md  Definition - Filtration.md  Definition - G-Measureable Set.md  Definition - Independence.md  Definition - Markov Process.md  Definition - Martingale.md  Definition - Radon-Nikodym Derivative.md  Definition - Risk Neutral Probability Measure.md  Distribution - Bernoulli.md  Distribution - Beta.md  Distribution - Binomial.md  Distribution - Cauchy.md  Distribution - Chi_Squared.md  Distribution - Discrete Uniform.md  Distribution - Exponential.md  Distribution - Gamma.md  Distribution - Normal.md  (+19 more)
(+182 files in other folders)
