[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Sinkin <Daniel.Sinkin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11.17"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
